test/sema/negative/subtyping2.output
subtyping2.impala:2 col 6: error: wrong argument type; expected float but found int32
